feat: connected header and footer to the site app

--- a/libs/pages/package.json
+++ b/libs/pages/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@angular-monorepo/pages",
+  "name": "@shamrock/pages",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^18.2.0",
