--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@angular-monorepo/ui",
+  "name": "@shamrock/ui",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^18.2.0",
