--- a/libs/pages/project.json
+++ b/libs/pages/project.json
@@ -10,7 +10,8 @@
       "executor": "@nx/angular:ng-packagr-lite",
       "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
       "options": {
-        "project": "libs/pages/ng-package.json"
+        "project": "libs/pages/ng-package.json",
+        "tailwindConfig": "libs/pages/tailwind.config.js"
       },
       "configurations": {
         "production": {
