wip: getting logo to display

--- a/libs/ui/project.json
+++ b/libs/ui/project.json
@@ -21,6 +21,13 @@
           "tsConfig": "libs/ui/tsconfig.lib.json"
         }
       },
+      "assets": [
+        {
+          "glob": "**/*",
+          "input": "libs/shared-assets",
+          "output": "./assets"
+        }
+      ],
       "defaultConfiguration": "production"
     },
     "test": {
