--- a/apps/shamrock-site/project.json
+++ b/apps/shamrock-site/project.json
@@ -8,12 +8,17 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/shamrock-site",
         "index": "apps/shamrock-site/src/index.html",
         "browser": "apps/shamrock-site/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js",
+          "@angular/localize/init"
+        ],
         "tsConfig": "apps/shamrock-site/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
@@ -22,7 +27,9 @@
             "input": "apps/shamrock-site/public"
           }
         ],
-        "styles": ["apps/shamrock-site/src/styles.scss"],
+        "styles": [
+          "apps/shamrock-site/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -72,7 +79,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/shamrock-site/jest.config.ts"
       }
