--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@angular/platform-browser": "~18.2.0",
     "@angular/platform-browser-dynamic": "~18.2.0",
     "@angular/router": "~18.2.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -27,6 +29,8 @@
     "@angular/cli": "~18.2.0",
     "@angular/compiler-cli": "~18.2.0",
     "@angular/language-service": "~18.2.0",
+    "@angular/localize": "~18.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.0",
     "@nx/angular": "19.6.1",
     "@nx/devkit": "19.6.1",
     "@nx/eslint": "19.6.1",
