--- a/libs/pages/package.json
+++ b/libs/pages/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^18.2.0",
-    "@angular/core": "^18.2.0"
+    "@angular/core": "^18.2.0",
+    "@nx/angular": "^18.2.0",
+    "@shamrock/ui": "^19.6.1"
   },
   "sideEffects": false
 }
