--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^18.2.0",
-    "@angular/core": "^18.2.0"
+    "@angular/core": "^18.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.0"
   },
   "sideEffects": false
 }
