--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@angular/cli": "~18.2.0",
     "@angular/compiler-cli": "~18.2.0",
     "@angular/language-service": "~18.2.0",
-    "@angular/localize": "~18.2.0",
+    "@angular/localize": "^18.2.2",
     "@ng-bootstrap/ng-bootstrap": "^17.0.0",
     "@nx/angular": "19.6.1",
     "@nx/devkit": "19.6.1",
