--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -1,10 +1,6 @@
 {
   "name": "@shamrock/ui",
   "version": "0.0.1",
-  "peerDependencies": {
-    "@angular/common": "^18.2.0",
-    "@angular/core": "^18.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^17.0.0"
-  },
+  "peerDependencies": {},
   "sideEffects": false
 }
