--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@angular/platform-browser": "~18.2.0",
     "@angular/platform-browser-dynamic": "~18.2.0",
     "@angular/router": "~18.2.0",
+    "@ngrx/signals": "^18.1.0",
+    "@ngrx/store": "^18.1.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "rxjs": "~7.8.0",
@@ -31,6 +33,7 @@
     "@angular/language-service": "~18.2.0",
     "@angular/localize": "^18.2.2",
     "@ng-bootstrap/ng-bootstrap": "^17.0.0",
+    "@ngrx/eslint-plugin": "^18.1.0",
     "@nx/angular": "19.6.1",
     "@nx/devkit": "19.6.1",
     "@nx/eslint": "19.6.1",
