--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@ngrx/signals": "19.0.0",
     "@ngrx/store": "19.0.0",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "5.3.2",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "0.15.0"
