--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "0.15.0"
+    "zone.js": "0.15.0",
+    "bootstrap": "^5.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "19.0.7",
